@@ -2,7 +2,10 @@ package rocks.learnercouncil.yesboats;
 
 import lombok.Getter;
 import lombok.Setter;
-import org.bukkit.*;
+import org.bukkit.Color;
+import org.bukkit.FireworkEffect;
+import org.bukkit.GameMode;
+import org.bukkit.Location;
 import org.bukkit.entity.*;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.FireworkMeta;
@@ -15,10 +18,9 @@ import rocks.learnercouncil.yesboats.arena.Arena;
 import rocks.learnercouncil.yesboats.arena.ArenaScoreboard;
 import rocks.learnercouncil.yesboats.arena.DebugPath;
 
-import java.text.DecimalFormat;
+import java.time.Duration;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class YesBoatsPlayer {
     private final YesBoats plugin = YesBoats.getPlugin();
@@ -39,7 +41,7 @@ public class YesBoatsPlayer {
     public YesBoatsPlayer(Arena arena, Player player) {
         ScoreboardManager scoreboardManager = plugin.getServer().getScoreboardManager();
         if (scoreboardManager == null)
-            throw new NullPointerException("ScoreboardManager was assigned before the first world was loaded, and thus, is null.");
+            throw new NullPointerException("ScoreboardManager is null. There is no world loaded.");
         this.arena = arena;
         this.player = player;
         this.scoreboard = new ArenaScoreboard(player, scoreboardManager.getNewScoreboard());
@@ -53,8 +55,7 @@ public class YesBoatsPlayer {
     public void setSpectator(boolean spectator) {
         if (spectator) {
             this.spectator = true;
-            if (player.isInsideVehicle())
-                Objects.requireNonNull(player.getVehicle()).remove();
+            if (player.isInsideVehicle()) Objects.requireNonNull(player.getVehicle()).remove();
             player.setAllowFlight(true);
             arena.getPlayers().forEach((player, ybPlayer) -> {
                 if (!ybPlayer.isSpectator()) {
@@ -81,7 +82,9 @@ public class YesBoatsPlayer {
         Vector direction = currentPosition.clone().subtract(previousPosition).normalize();
         if (Double.isNaN(direction.getX())) direction = new Vector();
 
-        RayTraceResult rayTraceResult = boundingBox.rayTrace(previousPosition, direction, currentPosition.distance(previousPosition));
+        RayTraceResult rayTraceResult = boundingBox.rayTrace(previousPosition, direction,
+                currentPosition.distance(previousPosition)
+        );
         return rayTraceResult != null;
     }
 
@@ -99,12 +102,13 @@ public class YesBoatsPlayer {
             if (isIntersecting(checkpointBoxes.get(nextNextCheckpoint))) {
                 debugPath.timestamp = System.currentTimeMillis();
                 DebugPath.debugPaths.add(debugPath);
-                plugin.getServer().getOnlinePlayers().stream().filter(p -> p.hasPermission("yesboats.admin")).forEach(p -> p.sendMessage(ChatColor.DARK_AQUA + "[YesBoats] "
-                        + ChatColor.AQUA + "Player "
-                        + ChatColor.YELLOW + player.getName()
-                        + ChatColor.AQUA + " has skipped checkpoint "
-                        + ChatColor.YELLOW + "#" + nextCheckpoint
-                        + ChatColor.AQUA + "."));
+                plugin.getServer()
+                        .getOnlinePlayers()
+                        .stream()
+                        .filter(p -> p.hasPermission(YesBoats.Permissions.ADMIN_MESSAGES))
+                        .forEach(p ->
+                                p.sendMessage(Messages.SKIPPED_CHECKPOINT.formatted(player.getName(), nextCheckpoint))
+                        );
                 checkpoint = nextNextCheckpoint;
                 debugPath = new DebugPath(player, arena);
             }
@@ -123,10 +127,12 @@ public class YesBoatsPlayer {
 
     public void respawn(List<Location> checkpointSpawns) {
         if (player.getVehicle() == null) return;
-        if (!(player.getVehicle() instanceof Boat)) return;
-        Boat oldBoat = (Boat) player.getVehicle();
+        if (!(player.getVehicle() instanceof Boat oldBoat)) return;
 
-        List<Entity> passengers = oldBoat.getPassengers().stream().filter(e -> e.getType() != EntityType.PLAYER).collect(Collectors.toList());
+        List<Entity> passengers = oldBoat.getPassengers()
+                .stream()
+                .filter(e -> e.getType() != EntityType.PLAYER)
+                .toList();
         Boat newBoat = (Boat) player.getWorld().spawnEntity(checkpointSpawns.get(checkpoint), oldBoat.getType());
 
         canExitBoat = true;
@@ -154,40 +160,32 @@ public class YesBoatsPlayer {
         final int currentPlace = arena.getCurrentPlace();
         Firework firework = (Firework) player.getWorld().spawnEntity(player.getLocation(), EntityType.FIREWORK);
         FireworkMeta meta = firework.getFireworkMeta();
-        meta.addEffect(FireworkEffect.builder().withTrail().withColor(Color.AQUA).with(FireworkEffect.Type.BALL).build());
+        meta.addEffect(
+                FireworkEffect.builder().withTrail().withColor(Color.AQUA).with(FireworkEffect.Type.BALL).build());
         firework.setFireworkMeta(meta);
         firework.detonate();
 
-        double totalSeconds = ((double) (System.currentTimeMillis() - time)) / 1000;
-        int minutes = (int) totalSeconds / 60;
-        double seconds = Math.floor((totalSeconds % 60) * 1000) / 1000;
-        DecimalFormat df = new DecimalFormat("00.00#");
-        String s = "th";
-        int lastDigit = currentPlace % 10;
-        if (lastDigit == 1 && currentPlace != 11)
-            s = "st";
-        else if (lastDigit == 2 && currentPlace != 12)
-            s = "nd";
-        else if (lastDigit == 3 && currentPlace != 13)
-            s = "rd";
-        final String suffix = s;
-        player.sendMessage(ChatColor.DARK_AQUA + "[YesBoats] "
-                + ChatColor.AQUA + "You have completed the race with a time of "
-                + ChatColor.YELLOW + minutes + ":" + df.format(seconds)
-                + ChatColor.AQUA + ". That puts you in "
-                + ChatColor.YELLOW + currentPlace + suffix
-                + ChatColor.AQUA + " place."
-                + "\nYou can now spectate the other players or type "
-                + ChatColor.YELLOW + "/yb leave"
-                + ChatColor.AQUA + " to return to the lobby.");
-        arena.getPlayers().keySet().forEach(p -> p.sendMessage(ChatColor.DARK_AQUA + "[YesBoats] "
-                + ChatColor.AQUA + ChatColor.BOLD + player.getName()
-                + ChatColor.RESET + ChatColor.AQUA + " has completed the race in "
-                + ChatColor.YELLOW + currentPlace + suffix
-                + ChatColor.AQUA + " place."));
+        Duration duration = Duration.ofMillis(System.currentTimeMillis() - time);
+        String formattedTime;
+        if (duration.toHours() > 1)
+            formattedTime = String.format("%d:%02d:%02d.%03d", duration.toHours(), duration.toMinutesPart(),
+                    duration.toSecondsPart(), duration.toMillisPart()
+            );
+        else formattedTime = String.format("%02d:%02d.%03d", duration.toMinutes(), duration.toSecondsPart(),
+                duration.toMillisPart()
+        );
+
+        player.sendMessage(Messages.FINISH_SELF.formatted(formattedTime, placeOrdinal(currentPlace)));
+
+        arena.getPlayers()
+                .keySet()
+                .forEach(p -> p.sendMessage(
+                        Messages.FINISH_OTHERS.formatted(player.getName(), placeOrdinal(currentPlace))
+                ));
+
         arena.incrementCurrentPlace();
         if (arena.getCurrentPlace() > arena.getPlayers().size()) {
-            arena.getPlayers().keySet().forEach(p -> p.sendMessage(ChatColor.DARK_AQUA + "[YesBoats] " + ChatColor.AQUA + "All Players have finished. Returning to lobby in 5 seconds."));
+            arena.getPlayers().keySet().forEach(p -> p.sendMessage(Messages.ALL_FINISHED));
             new BukkitRunnable() {
                 @Override
                 public void run() {
@@ -195,6 +193,22 @@ public class YesBoatsPlayer {
                 }
             }.runTaskLater(plugin, 100);
         }
+    }
+
+    private String placeOrdinal(int place) {
+        String suffix;
+        int lastTwoDigits = place % 100;
+        int lastDigit = place % 10;
+        if (lastDigit == 1 && lastTwoDigits != 11) {
+            suffix = "st";
+        } else if (lastDigit == 2 && lastTwoDigits != 12) {
+            suffix = "nd";
+        } else if (lastDigit == 3 && lastTwoDigits != 13) {
+            suffix = "rd";
+        } else {
+            suffix = "th";
+        }
+        return place + suffix;
     }
 
     public void restoreData() {
